# relay

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE.md  README.md  entrypoint.sh
.cargo/: config.toml
.github/workflows/: release-binaries.yml
relay_core/: Cargo.toml
relay_core/src/: crypto.rs  lib.rs  mailroom.rs  message.rs  payload.rs  relay.rs  test_payload.json
relay_core/tests/: integration_test.rs
relay_core/tests/common/: mod.rs
relay_core/tests/mock/: mod.rs
relay_daemon/: Cargo.toml
relay_daemon/.sqlx/: query-76ed3e11011472f342f356aec02f528f8d3c34ccb75664ee01469a0711fe01ed.json  query-81c2f307d8001c418f9f70028b83c41b5428fdb2dc28e536fc8efe97ad9ad43e.json  query-9783224c32ba85fe7713549a107e6ede8242e20573e32abd1f75b488c5e5f3da.json  query-e0e58d3cc7e614207635c56732b64269bd3700bdfcd4d5c315efe4e3732f0bcb.json  query-e955fa63c531e40f9f5d26cc020bb9ce4758fa32ec1e1c4f59cf447b69a3e847.json
relay_daemon/migrations/: 20250423122605_create_messages_envelopes_forwards.sql
relay_daemon/src/: archive.rs  config.rs  daemon.rs  event.rs  lib.rs  line.rs  server.rs
relay_daemon/src/daemon/: archive.rs  exchange.rs
relay_server/: Cargo.toml
relay_server/src/: config.rs  lib.rs  server.rs
relay_text/: Cargo.toml
relay_text/src/: files.rs  main.rs
relay_textfiles/: Cargo.toml
relay_textfiles/src/: cli.rs  config.rs  files.rs  lib.rs  main.rs  run.rs  textfiles.rs
relay_textfiles/src/cli/: run.rs
relay_textfiles/src/file_templates/: poem.txt  relay.toml
relay_textfiles/src/run/: print.rs
relay_textfiles/src/templates/: relay.toml
src/: relay.rs
