[package]
name = "relay_core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
base64 = "0.22.1"
bincode = { version = "2.0.1" }
chrono = "0.4.40"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
json-syntax = { version = "0.12.5", features = ["canonicalize"] }
rand = "0.8"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["raw_value"] }
thiserror = "2.0.12"
uuid = { version = "1.16.0", features = ["serde", "v4"] }
