[package]
name = "relay_daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
relay_core = { path = "../relay_core" }
reqwest = "0.12.15"
sqlx = { version = "0.8.4", features = ["sqlite"] }
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
tokio-cron-scheduler = "0.13.0"
