[package]
name = "relay_text"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "relayt"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
dotenvy = "0.15.7"
futures = "0.3.31"
notify = "8.0.0"
pem = "3.0.5"
relay_core = { path = "../relay_core" }
relay_daemon = { path = "../relay_daemon" }
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
