[package]
name = "relay_textfiles"
version = "0.1.2"
edition = "2024"

[[bin]]
name = "relayt"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["derive"] }
notify = "8.0.0"
notify-debouncer-mini = "0.6.0"
parking_lot = "0.12.3"
pem = "3.0.5"
relay_core = { path = "../relay_core" }
relay_daemon = { path = "../relay_daemon" }
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
toml = "0.8.22"
